--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -8,9 +8,13 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
     environment:
+      - N8N_HOST=0.0.0.0
+      - N8N_PORT=5678
+      - N8N_PROTOCOL=${APP_PROTOCOL:-http}
       - N8N_EDITOR_BASE_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
-      - N8N_SECURE_COOKIE=false
       - WEBHOOK_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
+      - N8N_SECURE_COOKIE=false
+      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=n8n-db
       - DB_POSTGRESDB_PORT=5432
@@ -18,10 +22,11 @@ services:
       - DB_POSTGRESDB_USER=n8n
       - DB_POSTGRESDB_PASSWORD=${N8N_NR_DB_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+      - N8N_METRICS=false
+      - N8N_DIAGNOSTICS_ENABLED=false
+      - GENERIC_TIMEZONE=Europe/Prague
     networks:
       - tipi_main_network
-    links:
-      - n8n-db
     depends_on:
       n8n-init:
         condition: service_completed_successfully
@@ -48,6 +53,7 @@ services:
       traefik.http.routers.n8n-local.service: n8n
       traefik.http.routers.n8n-local.tls: true
       runtipi.managed: true
+
   n8n-db:
     container_name: n8n-db
     image: postgres:16-alpine
@@ -60,6 +66,7 @@ services:
       - POSTGRES_DB=n8n
       - POSTGRES_NON_ROOT_USER=n8n
       - POSTGRES_NON_ROOT_PASSWORD=${N8N_NR_DB_PASSWORD}
+      - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
       - ${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
@@ -67,18 +74,27 @@ services:
       test:
         - CMD-SHELL
         - pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB
-      interval: 5s
+      interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 5
     labels:
       runtipi.managed: true
+
   n8n-init:
+    container_name: n8n-init
     image: alpine:3.20
     command:
       - sh
       - '-c'
-      - chown -R 1000:1000 /home/node/.n8n
+      - |
+        mkdir -p /home/node/.n8n
+        chown -R 1000:1000 /home/node/.n8n
+        chmod -R 755 /home/node/.n8n
     volumes:
       - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
     labels:
       runtipi.managed: true
+
+networks:
+  tipi_main_network:
+    external: true
