--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,20 +1,54 @@
+version: '3.8'
+
 services:
-  n8n:
-    container_name: n8n
-    image: docker.n8n.io/n8nio/n8n:latest
+  n8n-db:
+    container_name: n8n-db
+    image: postgres:11
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: tipi
+      POSTGRES_PASSWORD: "${N8N_DB_PASSWORD}"
+      POSTGRES_DB: n8n
+      POSTGRES_NON_ROOT_USER: n8n
+      POSTGRES_NON_ROOT_PASSWORD: "${N8N_NR_DB_PASSWORD}"
+    volumes:
+      - "${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data"
+      - "${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    networks:
+      - tipi_main_network
+    labels:
+      runtipi.managed: true
+
+  n8n-init:
+    container_name: n8n-init
+    image: bash:5.2.37
+    restart: unless-stopped
+    command:
+      - sh
+      - "-c"
+      - chown -R 1000:1000 /home/node/.n8n
+    volumes:
+      - "${APP_DATA_DIR}/data/n8n:/home/node/.n8n"
+    labels:
+      runtipi.managed: true
+    networks:
+      - tipi_main_network
+
+  n8n-1:
+    container_name: n8n-1
+    image: n8nio/n8n:latest
     restart: unless-stopped
     ports:
-      - ${APP_PORT}:5678
-    volumes:
-      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
+      - "${APP_PORT}:5678"
     environment:
-      - N8N_HOST=0.0.0.0
-      - N8N_PORT=5678
-      - N8N_PROTOCOL=${APP_PROTOCOL:-http}
       - N8N_EDITOR_BASE_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
-      - WEBHOOK_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
       - N8N_SECURE_COOKIE=false
-      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY}
+      - WEBHOOK_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
       - DB_TYPE=postgresdb
       - DB_POSTGRESDB_HOST=n8n-db
       - DB_POSTGRESDB_PORT=5432
@@ -22,16 +56,13 @@ services:
       - DB_POSTGRESDB_USER=n8n
       - DB_POSTGRESDB_PASSWORD=${N8N_NR_DB_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-      - N8N_METRICS=false
-      - N8N_DIAGNOSTICS_ENABLED=false
-      - GENERIC_TIMEZONE=Europe/Prague
-    networks:
-      - tipi_main_network
+    volumes:
+      - "${APP_DATA_DIR}/data/n8n:/home/node/.n8n"
     depends_on:
-      n8n-init:
-        condition: service_completed_successfully
       n8n-db:
         condition: service_healthy
+      n8n-init:
+        condition: service_completed_successfully
     labels:
       traefik.enable: true
       traefik.http.middlewares.n8n-web-redirect.redirectscheme.scheme: https
@@ -53,47 +84,8 @@ services:
       traefik.http.routers.n8n-local.service: n8n
       traefik.http.routers.n8n-local.tls: true
       runtipi.managed: true
-
-  n8n-db:
-    container_name: n8n-db
-    image: postgres:16-alpine
-    restart: unless-stopped
     networks:
       - tipi_main_network
-    environment:
-      - POSTGRES_USER=tipi
-      - POSTGRES_PASSWORD=${N8N_DB_PASSWORD}
-      - POSTGRES_DB=n8n
-      - POSTGRES_NON_ROOT_USER=n8n
-      - POSTGRES_NON_ROOT_PASSWORD=${N8N_NR_DB_PASSWORD}
-      - PGDATA=/var/lib/postgresql/data/pgdata
-    volumes:
-      - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
-      - ${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
-    healthcheck:
-      test:
-        - CMD-SHELL
-        - pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    labels:
-      runtipi.managed: true
-
-  n8n-init:
-    container_name: n8n-init
-    image: alpine:3.20
-    command:
-      - sh
-      - '-c'
-      - |
-        mkdir -p /home/node/.n8n
-        chown -R 1000:1000 /home/node/.n8n
-        chmod -R 755 /home/node/.n8n
-    volumes:
-      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
-    labels:
-      runtipi.managed: true
 
 networks:
   tipi_main_network:
