--- a/apps/n8n/config.json
+++ b/apps/n8n/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "n8n+",
+  "name": "n8n",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
@@ -31,4 +31,4 @@
   "supported_architectures": ["arm64", "amd64"],
   "created_at": 1691943801422,
   "updated_at": 1748992202212
-}
+}+
