--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,50 +1,48 @@
 version: '3.8'
-
 services:
   n8n-db:
     container_name: n8n-db
     image: postgres:11
     restart: unless-stopped
     environment:
-      POSTGRES_USER: tipi
-      POSTGRES_PASSWORD: "${N8N_DB_PASSWORD}"
-      POSTGRES_DB: n8n
-      POSTGRES_NON_ROOT_USER: n8n
-      POSTGRES_NON_ROOT_PASSWORD: "${N8N_NR_DB_PASSWORD}"
+      - POSTGRES_USER=tipi
+      - POSTGRES_PASSWORD=${N8N_DB_PASSWORD}
+      - POSTGRES_DB=n8n
+      - POSTGRES_NON_ROOT_USER=n8n
+      - POSTGRES_NON_ROOT_PASSWORD=${N8N_NR_DB_PASSWORD}
     volumes:
-      - "${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data"
-      - "${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh"
+      - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
+      - ${APP_DATA_DIR}/data/init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      test:
+        - CMD-SHELL
+        - pg_isready -h localhost -U $$POSTGRES_USER -d $$POSTGRES_DB
       interval: 5s
       timeout: 5s
       retries: 10
-    networks:
-      - tipi_main_network
     labels:
       runtipi.managed: true
 
   n8n-init:
     container_name: n8n-init
     image: bash:5.2.37
-    restart: unless-stopped
     command:
       - sh
-      - "-c"
+      - '-c'
       - chown -R 1000:1000 /home/node/.n8n
     volumes:
-      - "${APP_DATA_DIR}/data/n8n:/home/node/.n8n"
+      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
     labels:
       runtipi.managed: true
-    networks:
-      - tipi_main_network
 
   n8n-1:
     container_name: n8n-1
     image: n8nio/n8n:latest
     restart: unless-stopped
     ports:
-      - "${APP_PORT}:5678"
+      - ${APP_PORT}:5678
+    volumes:
+      - ${APP_DATA_DIR}/data/n8n:/home/node/.n8n
     environment:
       - N8N_EDITOR_BASE_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
       - N8N_SECURE_COOKIE=false
@@ -56,14 +54,16 @@ services:
       - DB_POSTGRESDB_USER=n8n
       - DB_POSTGRESDB_PASSWORD=${N8N_NR_DB_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
-    volumes:
-      - "${APP_DATA_DIR}/data/n8n:/home/node/.n8n"
+    user: "1000:1000"
     depends_on:
       n8n-db:
         condition: service_healthy
       n8n-init:
         condition: service_completed_successfully
+    networks:
+      - tipi_main_network
     labels:
+      runtipi.managed: true
       traefik.enable: true
       traefik.http.middlewares.n8n-web-redirect.redirectscheme.scheme: https
       traefik.http.services.n8n.loadbalancer.server.port: 5678
@@ -77,15 +77,11 @@ services:
       traefik.http.routers.n8n.tls.certresolver: myresolver
       traefik.http.routers.n8n-local-insecure.rule: Host(`n8n.${LOCAL_DOMAIN}`)
       traefik.http.routers.n8n-local-insecure.entrypoints: web
-      traefik.http.routers.n8n-local-insecure.service: n8n
       traefik.http.routers.n8n-local-insecure.middlewares: n8n-web-redirect
       traefik.http.routers.n8n-local.rule: Host(`n8n.${LOCAL_DOMAIN}`)
       traefik.http.routers.n8n-local.entrypoints: websecure
       traefik.http.routers.n8n-local.service: n8n
       traefik.http.routers.n8n-local.tls: true
-      runtipi.managed: true
-    networks:
-      - tipi_main_network
 
 networks:
   tipi_main_network:
