--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - DB_POSTGRESDB_USER=tipi
       - DB_POSTGRESDB_PASSWORD=${N8N_DB_PASSWORD}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+      - N8N_RUNNERS_ENABLED=true
     user: "1000:1000"
     depends_on:
       n8n-db:
