--- a/apps/n8n/docker-compose.yml
+++ b/apps/n8n/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  n8n:
-    container_name: n8n
+  n8n-1:
+    container_name: n8n-1
     image: n8nio/n8n:latest
     restart: unless-stopped
     ports:
