--- a/apps/nodered/config.json
+++ b/apps/nodered/config.json
@@ -1,20 +1,50 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Node-RED",
+  "name": "Node-RED+",
   "port": 8111,
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "id": "nodered",
   "tipi_version": 25,
-  "version": "4.0.9",
+  "version": "latest",
   "categories": ["automation"],
   "description": "Node-RED is a programming tool for wiring together hardware devices, APIs and online services in new and interesting ways. It provides a browser-based editor that makes it easy to wire together flows using the wide range of nodes in the palette that can be deployed to its runtime in a single-click.",
   "short_desc": "Low-code programming for event-driven applications",
   "author": "node-red",
   "source": "https://github.com/node-red/node-red",
-  "form_fields": [],
+  "form_fields": [
+    {
+      "type": "text",
+      "label": "TZ ▶ Container OS Timezone",
+      "hint": "Affects date, logs, scheduler nodes (default: Europe/Prague)",
+      "env_variable": "TZ",
+      "default": "Europe/Prague",
+      "required": false
+    },
+    {
+      "type": "password",
+      "label": "Node-RED Credential Secret",
+      "hint": "Used to encrypt stored credentials. If not set, a random key is generated at startup.",
+      "env_variable": "NODE_RED_CREDENTIAL_SECRET",
+      "required": false
+    },
+    {
+      "type": "text",
+      "label": "Node-RED Admin Username",
+      "hint": "If you set this (along with PASSWORD_HASH), the editor/API will be locked behind basic auth. Otherwise it’s open.",
+      "env_variable": "NODE_RED_ADMIN_USER",
+      "required": false
+    },
+    {
+      "type": "password",
+      "label": "Node-RED Admin Password Hash",
+      "hint": "Bcrypt hash of the admin password. _You can also set these via env vars (NODE_RED_ADMIN_USER / NODE_RED_ADMIN_PASSWORD_HASH), but if you leave it commented out, anyone can open the editor and deploy flows._",
+      "env_variable": "NODE_RED_ADMIN_PASSWORD_HASH",
+      "required": false
+    }
+  ],
   "supported_architectures": ["arm64", "amd64"],
   "created_at": 1691943801422,
-  "updated_at": 1739574401000
+  "updated_at": 1739574401000000
 }
