--- a/apps/nodered/docker-compose.yml
+++ b/apps/nodered/docker-compose.yml
@@ -3,12 +3,17 @@ version: "3.7"
 services:
   nodered:
     container_name: nodered
-    image: nodered/node-red:4.0.9
+    image: nodered/node-red:latest
     restart: unless-stopped
     ports:
       - ${APP_PORT}:1880
     volumes:
       - ${APP_DATA_DIR}/data:/data
+    environment:
+      - TZ=${TZ:-Europe/Prague}
+      - NODE_RED_CREDENTIAL_SECRET=${NODE_RED_CREDENTIAL_SECRET}
+      - NODE_RED_ADMIN_USER=${NODE_RED_ADMIN_USER}
+      - NODE_RED_ADMIN_PASSWORD_HASH=${NODE_RED_ADMIN_PASSWORD_HASH}
     networks:
       - tipi_main_network
     labels:
@@ -37,3 +42,7 @@ services:
       traefik.http.routers.nodered-local.service: nodered
       traefik.http.routers.nodered-local.tls: true
       runtipi.managed: true
+
+networks:
+  tipi_main_network:
+    external: true
