--- a/apps/nodered/docker-compose.yml
+++ b/apps/nodered/docker-compose.yml
@@ -1,19 +1,24 @@
-version: "3.7"
+version: '3.8'
 
 services:
   nodered:
     container_name: nodered
-    image: nodered/node-red:latest
+    image: nodered/node-red:4.0.9
+    environment:
+      TZ: "${TZ}"
+      NODE_RED_USERNAME: "${NODE_RED_USERNAME}"
+      NODE_RED_PASSWORD: "${NODE_RED_PASSWORD}"
+      NODE_RED_CREDENTIAL_SECRET: "${NODE_RED_CREDENTIAL_SECRET}"
+    volumes:
+      - "${APP_DATA_DIR}/data:/data"
     restart: unless-stopped
     ports:
-      - ${APP_PORT}:1880
-    environment:
-      - TZ=${TZ:-UTC}
-      - NODE_RED_USERNAME=${NODE_RED_USERNAME}
-      - NODE_RED_PASSWORD=${NODE_RED_PASSWORD}
-      - NODE_RED_CREDENTIAL_SECRET=${NODE_RED_CREDENTIAL_SECRET}
-    volumes:
-      - ${APP_DATA_DIR}/data:/data
+      - "${APP_PORT:-1880}:1880"
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:1880/ || exit 1"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - tipi_main_network
     labels:
@@ -42,3 +47,7 @@ services:
       traefik.http.routers.nodered-local.service: nodered
       traefik.http.routers.nodered-local.tls: true
       runtipi.managed: true
+      
+networks:
+  tipi_main_network:
+    external: true
