--- a/apps/nodered/docker-compose.yml
+++ b/apps/nodered/docker-compose.yml
@@ -15,15 +15,14 @@ services:
     ports:
       - "${APP_PORT:-1880}:1880"
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:1880/ || exit 1"]
+      test: "curl --fail http://localhost:1880/ || exit 1"
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
       - tipi_main_network
     labels:
-      # Main
-      traefik.enable: true
+      runtipi.managed: true
       traefik.http.middlewares.nodered-web-redirect.redirectscheme.scheme: https
       traefik.http.services.nodered.loadbalancer.server.port: 1880
       # Web
