--- a/apps/nodered/config.json
+++ b/apps/nodered/config.json
@@ -26,7 +26,7 @@
       "env_variable": "NODE_RED_USERNAME"
     },
     {
-      "type": "random",
+      "type": "password",
       "label": "Node-RED Admin Password",
       "env_variable": "NODE_RED_PASSWORD"
     },
