--- a/apps/nodered/docker-compose.yml
+++ b/apps/nodered/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: nodered
     image: nodered/node-red:4.0.9
     environment:
-      TZ: "${TZ}"
+      TZ: "${TZ:-Europe/Prague}"
       NODE_RED_USERNAME: "${NODE_RED_USERNAME}"
       NODE_RED_PASSWORD: "${NODE_RED_PASSWORD}"
       NODE_RED_CREDENTIAL_SECRET: "${NODE_RED_CREDENTIAL_SECRET}"
