--- a/apps/nodered/config.json
+++ b/apps/nodered/config.json
@@ -1,11 +1,11 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Node-RED+",
+  "name": "NodeRED+",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 1880,
-  "id": "node-red",
+  "id": "nodered",
   "categories": ["automation"],
   "tipi_version": 25,
   "version": "latest",
