--- a/apps/nodered/config.json
+++ b/apps/nodered/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "NodeRED+",
+  "name": "Node-RED+",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
