--- a/apps/planka/docker-compose.yml
+++ b/apps/planka/docker-compose.yml
@@ -21,8 +21,15 @@ services:
     environment:
       - BASE_URL=${APP_PROTOCOL:-http}://${APP_DOMAIN}
       - TRUST_PROXY=1
-      - DATABASE_URL="postgresql://postgres@postgres/planka"
-      - SECRET_KEY="${PLANKA_SECRET_KEY}"
+      - DATABASE_URL=postgresql://postgres@postgres/planka
+      - SECRET_KEY=${PLANKA_SECRET_KEY}
+      - DEFAULT_ADMIN_EMAIL=${PLANKA_ADMIN_EMAIL}
+      - DEFAULT_ADMIN_NAME=${PLANKA_ADMIN_NAME}
+      - DEFAULT_ADMIN_USERNAME=${PLANKA_ADMIN_USERNAME}
+      - DEFAULT_ADMIN_PASSWORD=${PLANKA_ADMIN_PASSWORD}
+      - TZ=${TZ:-Europe/Prague}
+      - PUID=1000
+      - PGID=1000
     networks:
       - tipi_main_network
     labels:
@@ -48,6 +55,7 @@ services:
       runtipi.managed: true
     depends_on:
       - postgres
+
   postgres:
     image: postgres:16-alpine
     container_name: planka-db
@@ -57,6 +65,7 @@ services:
     environment:
       POSTGRES_DB: planka
       POSTGRES_HOST_AUTH_METHOD: trust
+      TZ: ${TZ:-Europe/Prague}
     networks:
       - tipi_main_network
     labels:
