--- a/apps/vikunja/docker-compose.yml
+++ b/apps/vikunja/docker-compose.yml
@@ -6,9 +6,70 @@ services:
     image: vikunja/vikunja:latest
     user: "0:0"
     environment:
+      # Database Configuration
       VIKUNJA_DATABASE_TYPE: sqlite
       VIKUNJA_DATABASE_PATH: /app/vikunja/files/vikunja.db
+      
+      # Service Configuration
       VIKUNJA_SERVICE_JWTSECRET: ${VIKUNJA_SERVICE_JWTSECRET}
+      VIKUNJA_SERVICE_PUBLICURL: ${VIKUNJA_SERVICE_PUBLICURL:-}
+      VIKUNJA_SERVICE_ENABLEREGISTRATION: ${VIKUNJA_SERVICE_ENABLEREGISTRATION:-true}
+      VIKUNJA_SERVICE_ENABLELINKSHARING: ${VIKUNJA_SERVICE_ENABLELINKSHARING:-true}
+      VIKUNJA_SERVICE_ENABLETASKATTACHMENTS: ${VIKUNJA_SERVICE_ENABLETASKATTACHMENTS:-true}
+      VIKUNJA_SERVICE_ENABLETASKCOMMENTS: ${VIKUNJA_SERVICE_ENABLETASKCOMMENTS:-true}
+      VIKUNJA_SERVICE_ENABLECALDAV: ${VIKUNJA_SERVICE_ENABLECALDAV:-true}
+      VIKUNJA_SERVICE_ALLOWICONCHANGES: ${VIKUNJA_SERVICE_ALLOWICONCHANGES:-false}
+      VIKUNJA_SERVICE_CUSTOMLOGOURL: ${VIKUNJA_SERVICE_CUSTOMLOGOURL:-}
+      VIKUNJA_SERVICE_TIMEZONE: ${VIKUNJA_SERVICE_TIMEZONE:-GMT}
+      VIKUNJA_SERVICE_MOTD: ${VIKUNJA_SERVICE_MOTD:-}
+      VIKUNJA_SERVICE_MAXITEMSPERPAGE: ${VIKUNJA_SERVICE_MAXITEMSPERPAGE:-50}
+      VIKUNJA_SERVICE_ENABLEEMAILREMINDERS: ${VIKUNJA_SERVICE_ENABLEEMAILREMINDERS:-true}
+      VIKUNJA_SERVICE_ENABLEUSERDELETION: ${VIKUNJA_SERVICE_ENABLEUSERDELETION:-true}
+      VIKUNJA_SERVICE_DEMOMODE: ${VIKUNJA_SERVICE_DEMOMODE:-false}
+      
+      # File Configuration
+      VIKUNJA_FILES_MAXSIZE: ${VIKUNJA_FILES_MAXSIZE:-20MB}
+      
+      # Mailer Configuration
+      VIKUNJA_MAILER_ENABLED: ${VIKUNJA_MAILER_ENABLED:-false}
+      VIKUNJA_MAILER_HOST: ${VIKUNJA_MAILER_HOST:-}
+      VIKUNJA_MAILER_PORT: ${VIKUNJA_MAILER_PORT:-587}
+      VIKUNJA_MAILER_USERNAME: ${VIKUNJA_MAILER_USERNAME:-}
+      VIKUNJA_MAILER_PASSWORD: ${VIKUNJA_MAILER_PASSWORD:-}
+      VIKUNJA_MAILER_FROMEMAIL: ${VIKUNJA_MAILER_FROMEMAIL:-mail@vikunja}
+      VIKUNJA_MAILER_SKIPTLSVERIFY: ${VIKUNJA_MAILER_SKIPTLSVERIFY:-false}
+      VIKUNJA_MAILER_FORCESSL: ${VIKUNJA_MAILER_FORCESSL:-false}
+      
+      # CORS Configuration
+      VIKUNJA_CORS_ENABLE: ${VIKUNJA_CORS_ENABLE:-false}
+      VIKUNJA_CORS_ORIGINS: ${VIKUNJA_CORS_ORIGINS:-*}
+      
+      # Rate Limiting
+      VIKUNJA_RATELIMIT_ENABLED: ${VIKUNJA_RATELIMIT_ENABLED:-false}
+      VIKUNJA_RATELIMIT_KIND: ${VIKUNJA_RATELIMIT_KIND:-user}
+      VIKUNJA_RATELIMIT_PERIOD: ${VIKUNJA_RATELIMIT_PERIOD:-60}
+      VIKUNJA_RATELIMIT_LIMIT: ${VIKUNJA_RATELIMIT_LIMIT:-100}
+      
+      # Backgrounds
+      VIKUNJA_BACKGROUNDS_ENABLED: ${VIKUNJA_BACKGROUNDS_ENABLED:-true}
+      VIKUNJA_BACKGROUNDS_PROVIDERS_UPLOAD_ENABLED: ${VIKUNJA_BACKGROUNDS_PROVIDERS_UPLOAD_ENABLED:-true}
+      VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_ENABLED: ${VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_ENABLED:-false}
+      VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_ACCESSTOKEN: ${VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_ACCESSTOKEN:-}
+      VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_APPLICATIONID: ${VIKUNJA_BACKGROUNDS_PROVIDERS_UNSPLASH_APPLICATIONID:-}
+      
+      # Legal URLs
+      VIKUNJA_LEGAL_IMPRINTURL: ${VIKUNJA_LEGAL_IMPRINTURL:-}
+      VIKUNJA_LEGAL_PRIVACYURL: ${VIKUNJA_LEGAL_PRIVACYURL:-}
+      
+      # Webhooks
+      VIKUNJA_WEBHOOKS_ENABLED: ${VIKUNJA_WEBHOOKS_ENABLED:-true}
+      VIKUNJA_WEBHOOKS_TIMEOUTSECONDS: ${VIKUNJA_WEBHOOKS_TIMEOUTSECONDS:-30}
+      
+      # Metrics
+      VIKUNJA_METRICS_ENABLED: ${VIKUNJA_METRICS_ENABLED:-false}
+      VIKUNJA_METRICS_USERNAME: ${VIKUNJA_METRICS_USERNAME:-}
+      VIKUNJA_METRICS_PASSWORD: ${VIKUNJA_METRICS_PASSWORD:-}
+      
     volumes:
       - ${APP_DATA_DIR}/data/files:/app/vikunja/files
     restart: unless-stopped
@@ -42,3 +103,7 @@ services:
       traefik.http.routers.vikunja-local.service: vikunja
       traefik.http.routers.vikunja-local.tls: true
       runtipi.managed: true
+
+networks:
+  tipi_main_network:
+    external: true
