--- a/apps/vikunja/docker-compose.yml
+++ b/apps/vikunja/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - VIKUNJA_SERVICE_ENABLECALDAV=${VIKUNJA_SERVICE_ENABLECALDAV:-true}
       - VIKUNJA_SERVICE_ALLOWICONCHANGES=${VIKUNJA_SERVICE_ALLOWICONCHANGES:-false}
       - VIKUNJA_SERVICE_CUSTOMLOGOURL=${VIKUNJA_SERVICE_CUSTOMLOGOURL:-}
-      - VIKUNJA_SERVICE_TIMEZONE=${VIKUNJA_SERVICE_TIMEZONE:-GMT}
+      - VIKUNJA_SERVICE_TIMEZONE=${VIKUNJA_SERVICE_TIMEZONE:-Europe/Prague}
       - VIKUNJA_SERVICE_MOTD=${VIKUNJA_SERVICE_MOTD:-}
       - VIKUNJA_SERVICE_MAXITEMSPERPAGE=${VIKUNJA_SERVICE_MAXITEMSPERPAGE:-50}
       - VIKUNJA_SERVICE_ENABLEEMAILREMINDERS=${VIKUNJA_SERVICE_ENABLEEMAILREMINDERS:-true}
