--- a/apps/kopia/docker-compose.yml
+++ b/apps/kopia/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - server
       - start
       - --disable-csrf-token-checks
+      - --insecure
       - --address=0.0.0.0:51515
       - --server-username=${KOPIA_SERVER_USERNAME}
       - --server-password=${KOPIA_SERVER_PASSWORD}
