--- a/apps/kopia/config.json
+++ b/apps/kopia/config.json
@@ -1,11 +1,13 @@
 {
+  "$schema": "../app-info-schema.json",
   "name": "Kopia+",
+  "port": 51515,
   "available": true,
   "exposable": true,
-  "port": 51515,
   "id": "kopia",
   "tipi_version": 1,
   "version": "latest",
+  "dynamic_config": true,
   "categories": ["utilities", "data"],
   "description": "Fast and secure open-source backup/restore tool with encryption, deduplication, and compression. Supports multiple storage backends with web-based GUI.",
   "short_desc": "Encrypted, deduplicated backup solution with web interface.",
