--- a/apps/stremthru/docker-compose.yml
+++ b/apps/stremthru/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - STREMTHRU_STREMIO_ADDON=${STREMTHRU_STREMIO_ADDON}
       - STREMTHRU_INTEGRATION_TRAKT_CLIENT_ID=${STREMTHRU_INTEGRATION_TRAKT_CLIENT_ID}
       - STREMTHRU_INTEGRATION_TRAKT_CLIENT_SECRET=${STREMTHRU_INTEGRATION_TRAKT_CLIENT_SECRET}
-      - STREMTHRU_FEATURE=${STREMTHRU_FEATURE}
+      - STREMTHRU_FEATURE=${STREMTHRU_FEATURE: -+anime}
     restart: unless-stopped
     volumes:
       - ${APP_DATA_DIR}/data/stremthru:/app/data
