--- a/apps/kopia/docker-compose.yml
+++ b/apps/kopia/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     hostname: kopia-server
     restart: unless-stopped
     user: "0:0"
+    privileged: true
 
     ports:
       - ${APP_PORT}:51515
@@ -29,7 +30,7 @@ services:
       - ${APP_DATA_DIR}/data/logs:/app/logs
       - ${APP_DATA_DIR}/data/repository:/repository
       - ${APP_DATA_DIR}/data/tmp:/tmp:shared
-      - /root/runtipi:/runtipi:ro
+      - /root:/host-root:ro
       - /mnt:/mnt:rw
 
     networks:
