--- a/apps/kopia/docker-compose.yml
+++ b/apps/kopia/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - ${APP_DATA_DIR}/data/logs:/app/logs
       - ${APP_DATA_DIR}/data/repository:/repository
       - ${APP_DATA_DIR}/data/tmp:/tmp:shared
-      - /root:/host-root:ro
+      - /root/runtipi:/host-runtipi:ro
       - /mnt:/mnt:rw
 
     networks:
